[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/QFVisualizer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Game.tscn" type="PackedScene" id=2]

[node name="QFVisualizer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
autostart = true
[connection signal="executeStep" from="." to="." method="_on_QFVisualizer_executeStep"]
[connection signal="newEpisode" from="." to="." method="_on_QFVisualizer_newEpisode"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
